# irish-rail-nabber

./: .dockerignore  .env.production  .gitignore  ANALYSIS_RESULTS.md  API_ENDPOINTS.md  ARCHITECTURE.md  BLOCKERS.md  CLOUD_DEPLOYMENT.md  DATABASE.md  DATA_COMPLETENESS.md  DATA_SOURCES.md  DONE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  INDEX.md  Jenkinsfile  LOCAL_TESTING.md  PROJECT_STATUS.md  README.md  READY_FOR_PUBLIC.md  ROADMAP.md  SETUP.md  STRIPE_SETUP.md  TESTING.md  TEST_RESULTS.md  USAGE.md  analysis_delays.py  analysis_journeys.py  analysis_traffic.py  analysis_train_types.py  analyze_train_patterns.py  archive.py  backup-db.sh  backup.sh  benchmark_api.py  build_actual_network.py  build_proximity_network.py  build_rail_network_graph.py  build_real_network.py  create_interactive_viz.py  (+10 more)
.github/: dependabot.yml
.serena/: project.yml
api/: .dockerignore  Cargo.toml  Dockerfile
api/src/: chat.rs  db.rs  main.rs  models.rs  rate_limit.rs  state.rs
api/src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs  tokens.rs
api/src/billing/: handlers.rs
api/src/db/: mod.rs  usage.rs  users.rs
api/src/schema/: analytics.rs  bounds.rs  mod.rs  station.rs  train.rs  types.rs
dashboard/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
docs/: README.md  api.md  architecture.md  auth-billing.md  chatbot.md  dashboard.md  data-sources.md  deployment.md  network-graph.md  scraper.md  testing.md
migrations/: 001_severity2_schema_updates.sql  003_drop_unused_indexes.sql  (+6 more)
(+53 files in other folders)
