[package]
name = "irish-rail-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal", "time", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }
serde_json = "1"
bigdecimal = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
